# DesignPatterns

./: .gitignore
ActionPattern/LinkOfResponsibility/: CMakeLists.txt  handler.h  main.cc
ActionPattern/Strategy/: CMakeLists.txt  context.h  main.cc  strategy.h
CreatePattern/Prototype/: CMakeLists.txt  client.h  main.cc  prototype.h  prototype.md
