cmake_minimum_required (VERSION 3.20)                                                                                                                                                             

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
project (Strategy)

add_executable(exe main.cc)

